// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BigNumbers click show all 1`] = `
<DocumentFragment>
  <div
    class="sc-iwsKbI drpasF"
  >
    <div
      class="sc-gZMcBi fCXdrg"
    >
      <div
        class="sc-htpNat OJnHN"
      >
        President Race
      </div>
      <div
        class="sc-htoDjs hsaiDc"
      >
        The stats behind the two candidates
      </div>
      <div
        class="sc-bZQynM lolQoE"
      >
        <ul
          class="sc-EHOje jWJupF"
        >
          <li
            class="sc-VigVT dFIqiH"
          >
            <div
              class="sc-jTzLTM gNUbKG"
            >
              $497.8m
            </div>
            <div
              class="sc-ifAKCX ktSzuO"
            >
              Money raised by Hillary Clinton
            </div>
          </li>
          <li
            class="sc-VigVT dFIqiH"
          >
            <div
              class="sc-jTzLTM gNUbKG"
            >
              $247.8m
            </div>
            <div
              class="sc-ifAKCX ktSzuO"
            >
              Money raised by Donald Trump
            </div>
          </li>
          <li
            class="sc-VigVT dFIqiH"
          >
            <div
              class="sc-jTzLTM gNUbKG"
            >
              71.6m
            </div>
            <div
              class="sc-ifAKCX ktSzuO"
            >
              The number of people who turned in to the final president debate
            </div>
          </li>
          <li
            class="sc-VigVT dFIqiH"
          >
            <div
              class="sc-jTzLTM gNUbKG"
            >
              2-7
            </div>
            <div
              class="sc-ifAKCX ktSzuO"
            >
              Clinton’s odds of winning the US election (provided by Paddy Power)
            </div>
          </li>
          <li
            class="sc-VigVT dFIqiH"
          >
            <div
              class="sc-jTzLTM gNUbKG"
            >
              3-1
            </div>
            <div
              class="sc-ifAKCX ktSzuO"
            >
              Trump’s odds of winning the US election (provided by Paddy Power)
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="sc-gzVnrw dAWiLt"
    >
      <button
        class="sc-dnqmqq sc-gqjmRU cdHVnN"
      >
        Collapse
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BigNumbers should render the initial loading state correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bwzfXH dTniwG"
  >
    <div>
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`BigNumbers should render the standard component 1`] = `
<DocumentFragment>
  <div
    class="sc-iwsKbI drpasF"
  >
    <div
      class="sc-gZMcBi fCXdrg"
    >
      <div
        class="sc-htpNat OJnHN"
      >
        President Race
      </div>
      <div
        class="sc-htoDjs hsaiDc"
      >
        The stats behind the two candidates
      </div>
      <div
        class="sc-bZQynM lolQoE"
      >
        <ul
          class="sc-EHOje jWJupF"
        >
          <li
            class="sc-VigVT dFIqiH"
          >
            <div
              class="sc-jTzLTM gNUbKG"
            >
              $497.8m
            </div>
            <div
              class="sc-ifAKCX ktSzuO"
            >
              Money raised by Hillary Clinton
            </div>
          </li>
          <li
            class="sc-VigVT dFIqiH"
          >
            <div
              class="sc-jTzLTM gNUbKG"
            >
              $247.8m
            </div>
            <div
              class="sc-ifAKCX ktSzuO"
            >
              Money raised by Donald Trump
            </div>
          </li>
          <li
            class="sc-VigVT dFIqiH"
          >
            <div
              class="sc-jTzLTM gNUbKG"
            >
              71.6m
            </div>
            <div
              class="sc-ifAKCX ktSzuO"
            >
              The number of people who turned in to the final president debate
            </div>
          </li>
          <li
            class="sc-VigVT dFIqiH"
          >
            <div
              class="sc-jTzLTM gNUbKG"
            >
              2-7
            </div>
            <div
              class="sc-ifAKCX ktSzuO"
            >
              Clinton’s odds of winning the US election (provided by Paddy Power)
            </div>
          </li>
          <li
            class="sc-VigVT dFIqiH"
          >
            <div
              class="sc-jTzLTM gNUbKG"
            >
              3-1
            </div>
            <div
              class="sc-ifAKCX ktSzuO"
            >
              Trump’s odds of winning the US election (provided by Paddy Power)
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="sc-gzVnrw dAWiLt"
    >
      <button
        class="sc-dnqmqq sc-gqjmRU cdHVnN"
      >
        Show all
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BigNumbers should render the wide component 1`] = `
<DocumentFragment>
  <div
    class="sc-iwsKbI fRiMWW"
  >
    <div
      class="sc-gZMcBi fCXdrg"
    >
      <div
        class="sc-htpNat OJnHN"
      >
        President Race
      </div>
      <div
        class="sc-htoDjs hsaiDc"
      >
        The stats behind the two candidates
      </div>
      <div
        class="sc-bZQynM lolQoE"
      >
        <ul
          class="sc-EHOje jWJupF"
        >
          <li
            class="sc-VigVT jigWuZ"
          >
            <div
              class="sc-jTzLTM gNUbKG"
            >
              $497.8m
            </div>
            <div
              class="sc-ifAKCX ktSzuO"
            >
              Money raised by Hillary Clinton
            </div>
          </li>
          <li
            class="sc-VigVT jigWuZ"
          >
            <div
              class="sc-jTzLTM gNUbKG"
            >
              $247.8m
            </div>
            <div
              class="sc-ifAKCX ktSzuO"
            >
              Money raised by Donald Trump
            </div>
          </li>
          <li
            class="sc-VigVT jigWuZ"
          >
            <div
              class="sc-jTzLTM gNUbKG"
            >
              71.6m
            </div>
            <div
              class="sc-ifAKCX ktSzuO"
            >
              The number of people who turned in to the final president debate
            </div>
          </li>
          <li
            class="sc-VigVT jigWuZ"
          >
            <div
              class="sc-jTzLTM gNUbKG"
            >
              2-7
            </div>
            <div
              class="sc-ifAKCX ktSzuO"
            >
              Clinton’s odds of winning the US election (provided by Paddy Power)
            </div>
          </li>
          <li
            class="sc-VigVT jigWuZ"
          >
            <div
              class="sc-jTzLTM gNUbKG"
            >
              3-1
            </div>
            <div
              class="sc-ifAKCX ktSzuO"
            >
              Trump’s odds of winning the US election (provided by Paddy Power)
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="sc-gzVnrw dAWiLt"
    >
      <button
        class="sc-dnqmqq sc-gqjmRU cdHVnN"
      >
        Show all
      </button>
    </div>
  </div>
</DocumentFragment>
`;
